# clifire

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  app_template.py  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: action.yml  actions.yml  pre-commit.yml  test.yml
assets/: lintux.css
assets/records/: sample_out.cast
clifire/: application.py  command.py  config.py  main.py  out.py  result.py  template.py
clifire/commands/: __init__.py  help.py  version.py
docs/: mkdocs.yml
docs/docs/: app.py  app_config.py  app_template.py
docs/docs/assets/records/: greet.cast  help.cast  quick_start_hello.cast  samplapp_config.cast  samplapp_template.cast
docs/docs/en/: contributing.md  index.md  quick-start.md
docs/docs/en/user-guide/: basics.md  classes.md  config.md  decorators.md  grouped-commands.md  options-arguments.md  output.md  templates.md
docs/docs/es/: contributing.md  index.md  quick-start.md
docs/docs/es/user-guide/: basics.md  classes.md  config.md  decorators.md  grouped-commands.md  options-arguments.md  output.md  templates.md
docs/docs/fire/: greet.py  hello.py
en/: index.html
en/changelog/: index.html
en/contributing/: index.html
en/en/: index.html
en/en/changelog/: index.html
en/en/contributing/: index.html
en/en/quick-start/: index.html
en/en/user-guide/basics/: index.html
en/en/user-guide/classes/: index.html
en/en/user-guide/config/: index.html
en/en/user-guide/decorators/: index.html
en/en/user-guide/grouped-commands/: index.html
en/en/user-guide/options-arguments/: index.html
en/en/user-guide/output/: index.html
en/en/user-guide/templates/: index.html
en/es/: index.html
en/es/changelog/: index.html
en/es/contributing/: index.html
en/es/quick-start/: index.html
en/es/user-guide/basics/: index.html
en/es/user-guide/classes/: index.html
en/quick-start/: index.html
en/user-guide/basics/: index.html
en/user-guide/classes/: index.html
en/user-guide/config/: index.html
en/user-guide/decorators/: index.html
en/user-guide/grouped-commands/: index.html
en/user-guide/options-arguments/: index.html
en/user-guide/output/: index.html
en/user-guide/templates/: index.html
es/: index.html
es/changelog/: index.html
es/contributing/: index.html
es/en/: index.html
es/en/changelog/: index.html
es/en/contributing/: index.html
es/en/quick-start/: index.html
es/es/: index.html
es/es/changelog/: index.html
es/es/contributing/: index.html
es/es/quick-start/: index.html
es/quick-start/: index.html
es/user-guide/basics/: index.html
es/user-guide/classes/: index.html
es/user-guide/config/: index.html
es/user-guide/decorators/: index.html
es/user-guide/grouped-commands/: index.html
es/user-guide/options-arguments/: index.html
es/user-guide/output/: index.html
es/user-guide/templates/: index.html
fire/: build.py  doc.py  hello.py  main.py  test.py  update.py
sample_template/: hello.jinja2
search/: search_index.json
src/clifire/: application.py  command.py  config.py  main.py  out.py  template.py
src/clifire/commands/: __init__.py  help.py
tests/: test_app.py  test_command.py  test_command_help.py  test_command_version.py  test_config.py  test_output.py  test_result.py  test_sample_fire.py  test_sample_out.py  test_template.py
tests/sample/: fire.py  fire_debug.py  out.py
tests/sample/parent/: README.md
tests/sample/template/: sample.jinja2
(+23 files in other folders)
