[project]
name = "CliFire"
version = "0.1.5"
description = "Minimal CLI framework to build Python commands quickly and elegantly."
authors = [
    { name = "Roberto Lizana", email = "rober.lizana@gmail.com" }
]
packages = [{include = "clifire"}]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "rich>=14.0.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling==1.26.3"]  # Without a version spec, hatchling==1.27.0 is used which fails to publish. Ref: https://github.com/astral-sh/rye/issues/1446#issuecomment-2545154562
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.0",
    "coverage>=7.9.1",
    "pre-commit>=4.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-static-i18n>=1.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["clifire"]

[tool.rye.scripts]
fire = 'python -m clifire.main'

[project.scripts]
fire = "clifire.main:main"
