[project]
name = "CliFire"
version = "0.1.8"
description = "Minimal CLI framework to build Python commands quickly and elegantly."
authors = [
    { name = "Roberto Lizana", email = "rober.lizana@gmail.com" }
]
packages = ["src"]
readme = "README.md"
requires-python = ">= 3.0"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling==1.26.3"]  # Without a version spec, hatchling==1.27.0 is used which fails to publish. Ref: https://github.com/astral-sh/rye/issues/1446#issuecomment-2545154562
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "coverage>=7.9.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocs>=1.6.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "black-with-tabs>=22.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/clifire"]

[tool.rye.scripts]
fire = 'python -m src.clifire.main'

[tool.black]
line-length = 79
target-version = ["py310"]
skip-string-normalization = true

[flake8]
inline-quotes = "'"
multiline-quotes = "'"
docstring-quotes = "'"

[project.scripts]
fire = "clifire.main:main"
