[project]
name = "CliFire"
version = "0.1.9"
description = "Minimal CLI framework to build Python commands quickly and elegantly."
authors = [
    { name = "Roberto Lizana", email = "rober.lizana@gmail.com" }
]
packages = ["src"]
readme = "README.md"
requires-python = ">= 3.6"
dependencies = [
    "jinja2",
    "pyyaml",
    "rich",
]

[build-system]
requires = ["hatchling==1.26.3"]  # Without a version spec, hatchling==1.27.0 is used which fails to publish. Ref: https://github.com/astral-sh/rye/issues/1446#issuecomment-2545154562
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "coverage",
    "mkdocs-material",
    "mkdocs-static-i18n",
    "mkdocs",
    "pre-commit",
    "pytest",
    "black-with-tabs",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/clifire"]

[tool.rye.scripts]
fire = 'python -m src.clifire.main'

[tool.black]
line-length = 79
target-version = ["py38"]
skip-string-normalization = true

[flake8]
inline-quotes = "'"
multiline-quotes = "'"
docstring-quotes = "'"

[project.scripts]
fire = "clifire.main:main"
